tests/ui/traits/suggest-dereferences/suggest-dereferencing-receiver-argument.stderr
error[E0277]: the trait `Into<TargetStruct>` is not implemented for `&{integer}`
  --> $DIR/suggest-dereferencing-receiver-argument.rs:13:30
   |
LL |     let _b: TargetStruct = a.into();
   |                              ^^^^ the trait `Into<TargetStruct>` is not implemented for `&{integer}`, which is required by `&{integer}: Into<_>`
   |
   = note: required for `&{integer}` to implement `Into<TargetStruct>`
help: consider dereferencing here
   |
LL |     let _b: TargetStruct = (*a).into();
   |                            ++ +
help: consider removing the leading `&`-reference
   |
LL -     let a = &3;
LL +     let a = 3;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
